--- a/index.html
+++ b/index.html
@@ -462,19 +462,19 @@
     </section>
 
     <footer class="footer" id="contacts">
-        <div class="container" data-aos="zoom-in">
-            <div class="footer-main-content">
+        <div class="container">
+            <div class="footer-main-content" data-aos="zoom-in">
                 <div class="footer-my-info">
                     <h3 class="footer-my-name">Alex Tur</h3>
                     <p class="footer-my-profession">Frontend Developer</p>
                 </div>
-                <div class="footer-contacts">
+                <div class="footer-contacts" data-aos="zoom-in">
                     <a href="tel:+380505050505" class="footer-my-tel">+38 (050) 505 05 05</a>
                     <a href="mailto:alexturdev@gmail.com" class="footer-my-mail">alexturdev@gmail.com</a>
                 </div>
             </div>
 
-            <div class="social-links">
+            <div class="social-links" data-aos="zoom-in">
                 <a href="http://github.com" class="social-links-item-link">
                     <i class="i social-links-item fab fa-github-square"></i>
                 </a>
